--- a/paginas/ingreso.html
+++ b/paginas/ingreso.html
@@ -41,7 +41,7 @@
                   <input placeholder="Password" title="Inpit title" name="input-name" type="password" class="input_field" id="password_field">
                 </div>
                 <button title="Sign In" type="submit" class="sign-in_btn">
-                  <span>Ingresar</span>
+                  <span><a class="boto-ingresar" href="../index.html">Ingresar</a></span>
                 </button>
               
                 <div class="separator">
