--- a/paginas/ingreso.html
+++ b/paginas/ingreso.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Jshop-Home</title>
 </head>
-<body class="body-acceso">
+<body class="body">
     <div class="fondo">
 
         <div class="back-acceder">
