--- a/paginas/moviles.html
+++ b/paginas/moviles.html
@@ -11,7 +11,7 @@
     <title>Jshop-Home</title>
 </head>
 
-<body>
+<body class="body-moviles">
     <!--HTML Semantico-->
     <nav id="barra-navegacion" >
         <ul>
@@ -31,7 +31,7 @@
     <main class="main-moviles">
         <div class="row">
             <div class="col-4">
-              <div class="estilo-marca" id="list-example" class="list-group">
+              <div  class="estilo-marca" id="list-example" class="list-group">
                 <a class="items-moviles" class="list-group-item list-group-item-action" href="#list-item-1">Samsung</a>
                 <a class="items-moviles" class="list-group-item list-group-item-action" href="#list-item-2">iPhone</a>
                 <a class="items-moviles" class="list-group-item list-group-item-action" href="#list-item-3">Motorola</a>
@@ -39,7 +39,7 @@
               </div>
             </div>
             <div class="col-8">
-              <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+              <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example"  tabindex="0">
                 <h4 id="list-item-1" class="titulo-item">Samsung </h4>
                 <div class="contenedor-marca">
                     <div class="contenedor-articulo">
