--- a/paginas/tvs.html
+++ b/paginas/tvs.html
@@ -11,7 +11,7 @@
     <title>Jshop-Home</title>
 </head>
 
-<body>
+<body class="body-moviles">
     <!--HTML Semantico-->
     <nav id="barra-navegacion" >
         <ul>
